--- a/class04/main/templates/main/index.html
+++ b/class04/main/templates/main/index.html
@@ -15,6 +15,8 @@
       quidem asperiores veniam eveniet illo beatae in! Qui officiis voluptatum
       necessitatibus!
     </p>
+
+    <img src="{% static 'main/images/wallpaper.jpg' %}" alt="" srcset="" />
     <button onclick="hello()">hello</button>
 
     <script src="{% static 'main/js/app.js' %}"></script>
