--- a/class08/product/templates/product/index.html
+++ b/class08/product/templates/product/index.html
@@ -8,15 +8,17 @@
 {% block content %}
 
 <div class="container-fluid">
-  <div class="row">
-    <div class="col-6"><h3 class="mb-2 p-4">Product Management</h3></div>
+  <div class="row align-items-center justify-content-between p-4">
     <div class="col-6">
+      <h3 class="text-start">Product Management</h3>
+    </div>
+    <div class="col-6 text-end">
       <a href="{% url 'create' %}" class="btn btn-primary">Add New Product</a>
     </div>
   </div>
 
   <div class="row">
-    <div class="col-12 p-4">
+    <div class="col-12 p-2">
       <table class="table border">
         <thead>
           <tr>
