--- a/class10/main/templates/main/index.html
+++ b/class10/main/templates/main/index.html
@@ -6,6 +6,5 @@
 
 <!-- content -->
 {% block content %}
-<h2 class="text-bg-primary">THis is HOme page</h2>
-
+<h2 class="text-bg-primary">THis is Home page</h2>
 {% endblock %}
