--- a/class10/crud/templates/crud/student-register.html
+++ b/class10/crud/templates/crud/student-register.html
@@ -6,4 +6,69 @@
 {% block title %} Student Table {% endblock %}
 <!-- content -->
 
-{% block content %} {% endblock %}
+{% block content %}
+<div class="container-fluid p-4">
+  <div class="row p-4 my-4">
+    <div class="col-12 p-4">
+      <form method="POST">
+        {% csrf_token %}
+        <!-- student name -->
+        <div class="mb-3">
+          <label for="name" class="form-label"> Student Name</label>
+          <input type="text" class="form-control" id="name" name="name" />
+        </div>
+
+        <!-- stu age -->
+        <div class="mb-3">
+          <label for="age" class="form-label"> Student Age </label>
+          <input type="number" class="form-control" id="age" name="age" />
+        </div>
+
+        <!-- email -->
+        <div class="mb-3">
+          <label for="email" class="form-label"> Email address </label>
+          <input type="email" class="form-control" id="email" name="email" />
+        </div>
+
+        <!-- radio -->
+        <h6>Gender</h6>
+        <div class="form-check">
+          <input
+            class="form-check-input"
+            type="radio"
+            name="gender"
+            id="male"
+            value="male"
+          />
+          <label class="form-check-label" for="male"> Male </label>
+        </div>
+
+        <div class="form-check">
+          <input
+            class="form-check-input"
+            type="radio"
+            name="gender"
+            id="female"
+            value="female"
+          />
+          <label class="form-check-label" for="female"> Female </label>
+        </div>
+
+        <div class="form-check">
+          <input
+            class="form-check-input"
+            type="radio"
+            name="gender"
+            id="others"
+            value="others"
+          />
+          <label class="form-check-label" for="others"> Others </label>
+        </div>
+
+        <button type="submit" class="btn btn-primary mt-2">Submit</button>
+      </form>
+    </div>
+  </div>
+</div>
+
+{% endblock %}
