--- a/class10/crud/templates/crud/student-update.html
+++ b/class10/crud/templates/crud/student-update.html
@@ -3,11 +3,16 @@
 {% extends 'main/base.html' %}
 <!-- title -->
 
-{% block title %} Register New Student {% endblock %}
+{% block title %} Update Student {% endblock %}
 <!-- content -->
 
 {% block content %}
 <div class="container-fluid p-4">
+  <div class="row">
+    <div class="col-12">
+      <h3>Update Student</h3>
+    </div>
+  </div>
   <div class="row p-4 my-4">
     <div class="col-12 p-4">
       <form method="POST">
@@ -15,19 +20,38 @@
         <!-- student name -->
         <div class="mb-3">
           <label for="name" class="form-label"> Student Name</label>
-          <input type="text" class="form-control" id="name" name="name" />
+          <input
+            type="text"
+            class="form-control"
+            id="name"
+            name="update-name"
+            value="{{ key.stu_name }}"
+          />
         </div>
 
         <!-- stu age -->
         <div class="mb-3">
           <label for="age" class="form-label"> Student Age </label>
-          <input type="number" class="form-control" id="age" name="age" />
+          <input
+            type="number"
+            class="form-control"
+            id="age"
+            name="update-age"
+            value="{{ key.stu_age }}"
+            placeholder="Enter your age"
+          />
         </div>
 
         <!-- email -->
         <div class="mb-3">
           <label for="email" class="form-label"> Email address </label>
-          <input type="email" class="form-control" id="email" name="email" />
+          <input
+            type="email"
+            class="form-control"
+            id="email"
+            name="update-email"
+            value="{{ key.stu_email }}"
+          />
         </div>
 
         <!-- radio -->
@@ -36,7 +60,7 @@
           <input
             class="form-check-input"
             type="radio"
-            name="gender"
+            name="update-gender"
             id="male"
             value="male"
           />
@@ -47,7 +71,7 @@
           <input
             class="form-check-input"
             type="radio"
-            name="gender"
+            name="update-gender"
             id="female"
             value="female"
           />
@@ -58,14 +82,14 @@
           <input
             class="form-check-input"
             type="radio"
-            name="gender"
+            name="update-gender"
             id="others"
             value="others"
           />
           <label class="form-check-label" for="others"> Others </label>
         </div>
 
-        <button type="submit" class="btn btn-primary mt-2">Submit</button>
+        <button type="submit" class="btn btn-primary mt-2">Update</button>
       </form>
     </div>
   </div>
