feat: new login is added feature

--- a/class11/account/templates/account/home.html
+++ b/class11/account/templates/account/home.html
@@ -8,6 +8,16 @@
 
 {% block content %}
 
-<h2>THis home page</h2>
+<h2>This home page</h2>
 
-{% endblock %}
+{% if request.user.is_authenticated %}
+
+<h2>Welcome, {{ request.user.first_name }} {{ request.user.last_name }}</h2>
+
+<h4>{{ request.user }}</h4>
+
+<h4>{{ request.user.date_joined }}</h4>
+
+<h4>{{ request.user.email }}</h4>
+
+{% endif %} {% endblock %}
