--- a/class11/account/templates/account/navbar.html
+++ b/class11/account/templates/account/navbar.html
@@ -23,6 +23,15 @@
             Home
           </a>
         </li>
+
+        {% if request.user.is_authenticated %}
+
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+        </li>
+
+        {% else %}
+
         <li class="nav-item">
           <a class="nav-link" href="{% url 'login' %}">Login</a>
         </li>
@@ -30,6 +39,8 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url 'register' %}">register</a>
         </li>
+
+        {% endif %}
       </ul>
     </div>
   </div>
