--- a/class11/account/templates/account/login.html
+++ b/class11/account/templates/account/login.html
@@ -7,6 +7,40 @@
 <!-- content -->
 
 {% block content %}
-<h2>THis login page</h2>
 
+<div class="container mt-4">
+  <div class="row">
+    <div class="col-8 mt-4 p-4">
+      <h2>This login page</h2>
+
+      <!-- form start here -->
+      <form class="mt-4" method="POST">
+        {% csrf_token %}
+        <!-- username -->
+        <div class="mb-3">
+          <label for="username" class="form-label"> Username </label>
+          <input
+            type="text"
+            class="form-control"
+            id="username"
+            name="username"
+          />
+        </div>
+
+        <!-- password  -->
+        <div class="mb-3">
+          <label for="password" class="form-label">Password</label>
+          <input
+            type="password"
+            class="form-control"
+            id="password"
+            name="password"
+          />
+        </div>
+
+        <button type="submit" class="btn btn-primary">Login</button>
+      </form>
+    </div>
+  </div>
+</div>
 {% endblock %}
