--- a/class11/account/templates/account/register.html
+++ b/class11/account/templates/account/register.html
@@ -11,7 +11,7 @@
 <div class="container mt-4 p-4">
   <div class="row">
     <div class="col-8 mt-4">
-      <h2 class="mb-4">THis register page</h2>
+      <h2 class="mb-4">This register page</h2>
       <form method="POST">
         {% csrf_token %}
 
