CDN is use for tailwind

--- a/myblog/core/templates/core/index.html
+++ b/myblog/core/templates/core/index.html
@@ -5,10 +5,10 @@
 
 <!-- content -->
 {% block content %}
-<div class="container mx-auto p-6">
-  <p class="text-6xl bg-blue-500 text-white p-4 rounded-lg shadow-lg">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi praesentium
-    maiores itaque totam pariatur.
-  </p>
-</div>
+<h4 class="bg-blue-500">
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus quod
+  dignissimos non quidem quis tenetur facere quisquam deserunt laborum quam a
+  porro, soluta eius dicta. Illum accusantium voluptate a molestiae!
+</h4>
+
 {% endblock %}
