--- a/myblog/core/templates/core/base.html
+++ b/myblog/core/templates/core/base.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}{% endblock %}</title>
 
-    <!-- tailwind css -->
-    <link rel="stylesheet" href="{% static 'core/css/output.css' %}" />
+    <!-- tailwind cdn -->
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
   <body>
     {% block content %}{% endblock %}
